# hello-tracing-rs

./: Cargo.toml  Makefile  README.md  justfile  otel-collector-config.yaml  release.toml  rustfmt.toml  taplo.toml
.github/workflows/: auto-merge-dependabot-pr.yaml  ci.yaml  release-backend.yml  release-gateway.yml  release.yml
hello-tracing-backend/: Cargo.toml  Dockerfile  build.rs  config.yaml
hello-tracing-backend/config/: default.yaml
hello-tracing-backend/k8s/: deploy  hello-tracing-backend.yaml  kustomization.yaml
hello-tracing-backend/proto/: hello-tracing-backend-v0.proto
hello-tracing-backend/src/: api.rs  config.rs  lib.rs  main.rs  otel.rs
hello-tracing-backend/src/api/: mod.rs  v0.rs
hello-tracing-common/: Cargo.toml  config.yaml
hello-tracing-common/src/: config.rs  error.rs  lib.rs  otel.rs  telemetry.rs  tracing.rs
hello-tracing-common/src/otel/: grpc.rs  http.rs
hello-tracing-gateway/: Cargo.toml  Dockerfile  build.rs  config.yaml  proto
hello-tracing-gateway/config/: default.yaml
hello-tracing-gateway/k8s/: deploy  hello-tracing-gateway.yaml  kustomization.yaml
hello-tracing-gateway/proto/: hello-tracing-backend-v0.proto
hello-tracing-gateway/src/: api.rs  backend.rs  config.rs  lib.rs  main.rs  otel.rs
hello-tracing-gateway/src/api/: mod.rs  v0.rs
k8s/: hello-tracing.yaml
proto/: hello-tracing-v0.proto
