[workspace]
members = [
    "hello-tracing-backend",
    "hello-tracing-common",
    "hello-tracing-gateway",
]
resolver = "2"

[workspace.package]
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/hello-tracing-rs"
repository    = "https://github.com/hseeberger/hello-tracing-rs"
documentation = "https://github.com/hseeberger/hello-tracing-rs"
publish       = false

[workspace.dependencies]
anyhow                = { version = "1.0" }
assert_matches        = { version = "1.5" }
api-version           = { version = "0.2" }
async-trait           = { version = "0.1" }
axum                  = { version = "0.8" }
figment               = { version = "0.10" }
opentelemetry         = { version = "0.28" }
opentelemetry_sdk     = { version = "0.28" }
opentelemetry-http    = { version = "0.28" }
opentelemetry-otlp    = { version = "0.28", default-features = false }
prost                 = { version = "0.13" }
serde                 = { version = "1.0" }
serde_json            = { version = "1.0" }
time                  = { version = "0.3" }
thiserror             = { version = "2.0" }
tokio                 = { version = "1" }
tonic                 = { version = "0.12" }
tonic-build           = { version = "0.12" }
tower                 = { version = "0.5" }
tower-http            = { version = "0.6" }
tracing               = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.29", default-features = false }
tracing-subscriber    = { version = "0.3", default-features = false }
walkdir               = { version = "2.5" }
