[package]
name          = "hello-tracing-backend"
version       = "1.3.0"
description   = "hello-tracing-backend"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
hello-tracing-common  = { path = "../hello-tracing-common" }
anyhow                = { workspace = true }
axum                  = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prost                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tokio                 = { workspace = true }
tonic                 = { workspace = true }
tower                 = { workspace = true }
tower-http            = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

[build-dependencies]
anyhow      = { workspace = true }
tonic-build = { workspace = true }
walkdir     = { workspace = true }
