[package]
name          = "hello-tracing-common"
version       = "1.1.0"
description   = "hello-tracing-backend"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow                = { workspace = true }
axum                  = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-http    = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prost                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
time                  = { workspace = true }
tokio                 = { workspace = true }
tonic                 = { workspace = true }
tower                 = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }
