[package]
name          = "hello-tracing-common"
version       = "1.2.2"
description   = "hello-tracing-backend"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow                = { workspace = true }
axum                  = { workspace = true }
error-ext             = { workspace = true }
figment               = { workspace = true, features = [ "env", "yaml" ] }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prost                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
time                  = { workspace = true }
tokio                 = { workspace = true }
tonic                 = { workspace = true }
tower                 = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
