[package]
name          = "hello-tracing-common"
version       = "1.3.1"
description   = "hello-tracing-backend"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow                = { workspace = true }
axum                  = { workspace = true }
figment               = { workspace = true, features = [ "env", "yaml" ] }
opentelemetry         = { workspace = true }
opentelemetry-http    = { workspace = true }
opentelemetry_sdk     = { workspace = true, features = [ "rt-tokio" ] }
opentelemetry-otlp    = { workspace = true, default-features = false, features = [ "trace", "grpc-tonic" ] }
prost                 = { workspace = true }
serde                 = { workspace = true, features = [ "derive" ] }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
time                  = { workspace = true, features = [ "formatting" ] }
tokio                 = { workspace = true }
tonic                 = { workspace = true }
tower                 = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true, features = [ "env-filter", "fmt", "json" ] }

[dev-dependencies]
assert_matches = { workspace = true }
